# playa

./: .gitattributes  .gitignore  .gitmodules  .gitnexusignore  AAPL.md  AGENTS.md  AGENTS_RU.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DATAFLOW_DIAGRAM.txt  DEVELOP.md  GEMINI.md  HANDOFF_PLAYA.md  LICENSE  NOTARIZATION.md  PLAN1.md  PLAN2.md  Plan2.md  Plan7.md  README.md  REVIEW.md  TODO.md  VCPKG.md  _verify_final_round.md  a.cmd  apple_cert.sh  apple_reqs.sh  arch.md  architecture.md  attrs_todo.md  bbb.md  bbb1.md  bbb2.md  bbb3.md  bbb4.md  (+84 more)
.bughunt/: agent_gpu_bridge.md  agent_queue_research.md  agent_time_conv.md  agent_timeline_bounds.md  coord_audit.md  gpu_compositor_unification.md  jobs_ui_design.md  paint_plan.md  plan1.md  research_seedance_compute.md
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.gitnexus/: lbug  lbug.wal
.orig/: cache.rs  convert.rs  main.rs  sequence.rs  status_bar.rs  video.rs  viewport.rs
crates/playa-app/: CLAUDE.md  Cargo.toml
crates/playa-app/src/: cli.rs  config.rs  lib.rs  main_events.rs  runner.rs  shell.rs
crates/playa-app/src/app/: README.md  api.rs  events.rs  layout.rs  mod.rs  project_io.rs  run.rs  snapshot.rs  tabs.rs
crates/playa-app/src/server/: api.rs  mod.rs
crates/playa-engine/: CLAUDE.md  Cargo.toml  build.rs
crates/playa-engine/src/: defaults.rs  lib.rs  utils.rs
crates/playa-engine/src/core/: cache_man.rs  debounced_preloader.rs  event_bus.rs  global_cache.rs  layout_events.rs  player.rs  player_events.rs  workers.rs
crates/playa-engine/src/entities/: ai_node.rs  attr_schemas.rs  attrs.rs  camera_node.rs  comp_events.rs  comp_node.rs  compositor.rs  file_node.rs  frame.rs  gpu_blend_bridge.rs  gpu_compositor.rs  keys.rs  loader.rs  mod.rs  node.rs  node_kind.rs  project.rs  ref_node.rs  space.rs  text_node.rs  track_matte.rs  traits.rs  transform.rs
crates/playa-engine/src/entities/effects/: blur.rs  brightness.rs  hsv.rs  mod.rs
crates/playa-engine/src/render_gpu/: CLAUDE.md  mod.rs  wgpu_compositor.rs
crates/playa-engine/src/render_gpu/effects/: blur.rs  brightness.rs  hsv.rs  mod.rs
crates/playa-engine/src/render_gpu/shaders/: layer_blend.wgsl
crates/playa-engine/src/render_gpu/shaders/effects/: blur.wgsl  brightness.wgsl  hsv.wgsl
crates/playa-events/: Cargo.toml
crates/playa-events/.gitnexus/: lbug  lbug.wal
crates/playa-events/src/: bus.rs  comp.rs  layout.rs  lib.rs  node_editor.rs  player.rs  prefs.rs  project_media.rs  timeline.rs  viewport.rs  viewport_tool.rs
crates/playa-io/: CLAUDE.md  Cargo.toml
crates/playa-io/src/: dispatch.rs  error.rs  exr_layered.rs  lib.rs  media.rs  pixel.rs  source_image.rs  video.rs  webcodecs.rs
crates/playa-io/src/source_image/: mod.rs  native.rs  stub.rs
crates/playa-io/src/video/: ffmpeg_imp.rs  mod.rs  stub.rs
crates/playa-job-inpaint/: Cargo.toml  README.md
crates/playa-job-inpaint/src/: http.rs  lib.rs  provider.rs
crates/playa-job-seedance/: Cargo.toml  README.md
crates/playa-job-seedance/examples/: run_one.rs
crates/playa-job-seedance/src/: http.rs  lib.rs  params.rs  provider.rs
crates/playa-jobs/: Cargo.toml  README.md
crates/playa-jobs-core/: Cargo.toml  README.md
crates/playa-jobs-core/src/: event.rs  job.rs  lib.rs  persist.rs  provider.rs  queue.rs  settings.rs
crates/playa-jobs-ui/: Cargo.toml  README.md
crates/playa-jobs-ui/src/: dialog.rs  lib.rs  panel.rs  prefs.rs
crates/playa-jobs/src/: cancel.rs  job.rs  lib.rs  persist.rs  provider.rs  queue.rs  secret.rs
crates/playa-jobs/tests/: facade.rs
crates/playa-py/: Cargo.toml  README.md  pyproject.toml
crates/playa-py/src/: lib.rs
crates/playa-time/: Cargo.toml
crates/playa-time/src/: conversion.rs  coord.rs  fps.rs  lib.rs  round.rs  speed.rs  timecode.rs
crates/playa-ui/: Cargo.toml
crates/playa-ui/src/: help.rs  lib.rs  ui.rs
crates/playa-ui/src/dialogs/: encode_stub_wasm.rs  mod.rs
crates/playa-ui/src/dialogs/encode/: encode.rs  encode_ui.rs
crates/playa-ui/src/dialogs/prefs/: input_handler.rs  prefs.rs  prefs_events.rs
crates/playa-ui/src/widgets/: actions.rs  dnd.rs  file_dialogs.rs  mod.rs
crates/playa-ui/src/widgets/ae/: ae_ui.rs  mod.rs
crates/playa-ui/src/widgets/node_editor/: mod.rs  node_events.rs  node_graph.rs
crates/playa-ui/src/widgets/project/: mod.rs  project_events.rs  project_ui.rs
crates/playa-ui/src/widgets/status/: mod.rs  progress_bar.rs  status.rs
crates/playa-ui/src/widgets/timeline/: mod.rs  timeline.rs  timeline_events.rs  timeline_helpers.rs  timeline_ui.rs
crates/playa-ui/src/widgets/viewport/: coords.rs  gizmo.rs  mod.rs  pick.rs  renderer.rs  shaders.rs  tool.rs  viewport.rs  viewport_events.rs  viewport_ui.rs
crates/playa-ui/src/widgets/viewport/wgsl/: viewport_image.wgsl
docs/: AGENTS.md  CHANGELOG.md  CLAUDE.md  DIAGRAMS.md  FINDINGS.md  RUST.md  TODO.md  VCPKG.md  frame_flow.md  plan.md  report8.md  task.md  task2.md  todo8.md
md/: CHANGELOG.md  DIAGRAMS.md  REPORT.md  TODO.md  WGPU.md  _recheck_final.md  _recheck_sweep.md  _report_compositor.md  _report_encode_server_misc.md  _report_events.md  _report_ui_entities.md  _verify_bugs.md  _verify_compositor_fix.md  _verify_comprehensive.md  _verify_final_fixes.md  _verify_perf.md  _verify_phase1_fixes.md  _verify_phase2_fixes.md  _verify_phase3_fixes.md  _verify_round5_fixes.md  plan1.md
plans/: claude_plan.md  megaplan.md  plan1.md  plan4.md  plan_cdx.md  rest.md
report/: done.md
reports/: GPU_COMPOSITOR_COMPLETED.md  GPU_COMPOSITOR_NEXT_STEPS.md  Plan7.md  clod1.md  clod2.md  dataflow.md  grk.md  plan.md  plan1.md  plan2.md  plan3.md  plan5.md  plan6.md  qwn.md  qwn_report.md  qwn_report2.md  report.md  report1.md  report2.md  task.md  task2.md  timeline_drawing_issues_report.md  timeline_view_modes_refactoring_plan.md  widgets_audit.md
reports1/: claude_gpu.md  grok_plan.md
reports2/: qwn.md
reports3/: plan7.md
shaders/: tonemap_aces.glsl  tonemap_reinhard.glsl
src/: README.md  attrs.rs  cache.rs  cache_man.rs  cli.rs  clip.rs  comp.rs  (+39 more)
(+183 files in other folders)
