[workspace]
members = [
    ".",
    "crates/playa-app",
    "crates/playa-engine",
    "crates/playa-events",
    "crates/playa-io",
    "crates/playa-ui",
    "crates/xtask",
]
exclude = ["crates/playa-py"]
resolver = "2"
default-members = ["."]

[package]
name = "playa"
version = "0.1.142"
edition = "2024"
autobins = false  # Don't auto-discover binaries in src/bin/
authors = ["joss13@gmail.com"]
description = "Image sequence player (EXR, PNG, JPEG, TIFF, .MP4). Pure Rust with optional OpenEXR/FFmpeg support."
homepage = "https://github.com/ssoj13/playa"
repository = "https://github.com/ssoj13/playa"
license = "MIT"
keywords = ["image", "exr", "player", "vfx", "sequence"]
categories = ["multimedia::images", "graphics"]
readme = "README.md"
exclude = [".github/*", "todo/*", "bootstrap.cmd", "bootstrap.sh", "build.rs", "cliff.toml"]

[features]
default = []
profiler = ["dep:puffin", "dep:puffin_egui"]

[dependencies]
playa-app = { path = "crates/playa-app" }
playa-engine = { path = "crates/playa-engine" }
playa-events = { path = "crates/playa-events" }
playa-io = { path = "crates/playa-io" }
playa-ui = { path = "crates/playa-ui" }
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

puffin = { version = "0.20", optional = true }
puffin_egui = { version = "0.30", optional = true }

# Binary targets
[[bin]]
name = "playa"
path = "src/main.rs"

[profile.release]
strip = false
lto = false

[patch."ssh://git@github.com/ssoj13/vfx-rs.git"]
vfx-exr  = { path = "../vfx-rs/crates/exr/vfx-exr" }
vfx-io   = { path = "../vfx-rs/crates/oiio/vfx-io" }
vfx-core = { path = "../vfx-rs/crates/foundation/vfx-core" }

[package.metadata.packager]
product-name = "Playa"
identifier = "com.playa.exr-player"
icons = ["icon.png"]
resources = [
    "target/release/*.dll",
    "target/release/*.so*"
]

[[package.metadata.packager.file-associations]]
extensions = ["exr", "png", "jpg", "jpeg", "tif", "tiff"]
description = "Image Sequence Files"
role = "editor"

[package.metadata.packager.windows]
allow-downgrades = true

[package.metadata.packager.nsis]
installer-mode = "perMachine"

[package.metadata.packager.macos]
signing-identity = "Developer ID Application: Alexander Khalyavin (Y8PQ7YASU9)"

[package.metadata.release]
pre-release-commit-message = "chore: Release {{crate_name}} v{{version}}"
pre-release-hook = ["git-cliff", "--tag", "v{{version}}", "-o", "CHANGELOG.md"]
