[workspace]
members = [
    ".",
    "crates/playa-app",
    "crates/playa-coord",
    "crates/playa-engine",
    "crates/playa-events",
    "crates/playa-ffmpeg",
    "crates/playa-io",
    "crates/playa-job-inpaint",
    "crates/playa-job-seedance",
    "crates/playa-jobs",
    "crates/playa-jobs-core",
    "crates/playa-jobs-ui",
    "crates/playa-prefs",
    "crates/playa-time",
    "crates/playa-ui",
    "crates/xtask",
]
exclude = ["crates/playa-py"]
resolver = "2"
default-members = ["."]

[workspace.dependencies]
anyhow = "1.0"
bytemuck = "1.25"
clap = { version = "4.6", features = ["derive"] }
egui-wgpu = "0.34"
egui_dock = { version = "0.19", features = ["serde"] }
env_logger = "0.11"
glam = "0.32"
half = { version = "2.7", features = ["bytemuck"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "tga", "hdr"] }
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.22", features = ["v4", "serde"] }
wgpu = "29"
playa-coord = { path = "crates/playa-coord" }
playa-ffmpeg = { path = "crates/playa-ffmpeg", features = ["static"] }
playa-time = { path = "crates/playa-time" }

[package]
name = "playa"
version = "0.1.142"
edition = "2024"
autobins = false  # Don't auto-discover binaries in src/bin/
authors = ["joss13@gmail.com"]
description = "Image sequence player (EXR, PNG, JPEG, TIFF, .MP4). EXR via vfx-io (oiio-rs); video via FFmpeg (playa-ffmpeg)."
homepage = "https://github.com/ssoj13/playa"
repository = "https://github.com/ssoj13/playa"
license = "MIT"
keywords = ["image", "exr", "player", "vfx", "sequence"]
categories = ["multimedia::images", "graphics"]
readme = "README.md"
exclude = [".github/*", "todo/*", "cliff.toml"]

[features]
default = []
profiler = ["dep:puffin", "dep:puffin_egui"]

[dependencies]
playa-app = { path = "crates/playa-app" }
playa-engine = { path = "crates/playa-engine" }
playa-events = { path = "crates/playa-events" }
playa-io = { path = "crates/playa-io", default-features = false }
playa-ui = { path = "crates/playa-ui" }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

puffin = { version = "0.20", optional = true }
# Patched puffin_egui (egui 0.34) — crates.io 0.30 still pins egui ^0.33, so we
# consume our extracted copy via git-ref. Keeps the `profiler` feature working
# on egui 0.34 and avoids a duplicate egui 0.33 in the lock.
puffin_egui = { git = "ssh://git@github.com/ssoj13/puffin-egui-rs.git", branch = "main", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
playa-io = { path = "crates/playa-io", features = ["exr", "ffmpeg"] }

# Binary targets
[[bin]]
name = "playa"
path = "src/main.rs"

[profile.release]
strip = false
lto = false

[package.metadata.packager]
product-name = "Playa"
identifier = "com.playa.exr-player"
icons = ["icon.png"]
resources = [
    "target/release/*.dll",
    "target/release/*.so*"
]

[[package.metadata.packager.file-associations]]
extensions = ["exr", "png", "jpg", "jpeg", "tif", "tiff"]
description = "Image Sequence Files"
role = "editor"

[package.metadata.packager.windows]
allow-downgrades = true

[package.metadata.packager.nsis]
installer-mode = "perMachine"

[package.metadata.packager.macos]
signing-identity = "Developer ID Application: Alexander Khalyavin (Y8PQ7YASU9)"

[package.metadata.release]
pre-release-commit-message = "chore: Release {{crate_name}} v{{version}}"
pre-release-hook = ["git-cliff", "--tag", "v{{version}}", "-o", "CHANGELOG.md"]
