[package]
name = "playa-app"
version = "0.1.142"
edition = "2024"
publish = false
description = "Playa desktop host — PlayaApp, event routing, REST API, CLI"

[lib]
name = "playa_app"
path = "src/lib.rs"

[features]
default = ["jobs"]
# Enables the long-running IO jobs subsystem (queue + UI panel + Seedance
# provider + Preferences-panel render). Disable via --no-default-features for
# a leaner build with no fal.ai integration, no Jobs DockTab, no jobs prefs.
jobs = ["dep:playa-jobs"]

[dependencies]
playa-engine = { path = "../playa-engine" }
playa-events = { path = "../playa-events" }
playa-jobs = { path = "../playa-jobs", optional = true }
playa-prefs = { path = "../playa-prefs" }
playa-ui = { path = "../playa-ui" }
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "wayland",
    "web_screen_reader",
    "x11",
    "persistence",
] }
egui_dock = { workspace = true }
image = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
wgpu = { workspace = true }
scanseq = "0.1.5"
const_format = "0.2"
crossbeam-channel = "0.5"
dirs-next = "2.0"
num_cpus = "1.17"
regex = "1.12"
rfd = "0.17"
rouille = "3.6"
