[package]
name = "playa-engine"
version = "0.1.142"
edition = "2024"
publish = false
description = "Playa playback/compositing engine (core cache, entities, loaders)"

[lib]
name = "playa_engine"
path = "src/lib.rs"

[dependencies]
playa-io = { path = "../playa-io" }
playa-events = { path = "../playa-events" }
anyhow = "1.0"
bytemuck = "1.25"
cosmic-text = "0.18"
crossbeam = "0.8.4"
egui = "0.33"
egui_glow = "0.33"
enum_dispatch = "0.3"
glam = "0.32"
glob = "0.3"
half = "2.7"
lazy_static = "1.5"
log = "0.4"
lru = "0.16"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38"
uuid = { version = "1.22", features = ["v4", "serde"] }
