[package]
name = "playa-engine"
version = "0.1.142"
edition = "2024"
publish = false
description = "Playa playback/compositing engine (core cache, entities, loaders)"

[lib]
name = "playa_engine"
path = "src/lib.rs"

[dependencies]
playa-io = { path = "../playa-io", default-features = false }
playa-events = { path = "../playa-events" }
playa-time = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
cosmic-text = "0.18"
crossbeam = "0.8.4"
enum_dispatch = "0.3"
wgpu = "27"
glam = { workspace = true }
glob = "0.3"
half = { workspace = true }
lazy_static = "1.5"
log = { workspace = true }
lru = "0.16"
rayon = "1.11"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sysinfo = "0.38"
uuid = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
playa-io = { path = "../playa-io", features = ["exr", "ffmpeg"] }
