[package]
name = "playa-events"
version = "0.1.142"
edition = "2024"
publish = false
description = "Playa typed events + EventBus (single communication path)"

[lib]
name = "playa_events"
path = "src/lib.rs"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.22", features = ["serde", "v4"] }
