[package]
name = "playa-events"
version = "0.1.142"
edition = "2024"
publish = false
description = "Playa typed events + EventBus (single communication path)"

[lib]
name = "playa_events"
path = "src/lib.rs"

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
