[package]
name = "playa-io"
version = "0.1.142"
edition = "2024"
publish = false
description = "Playa media I/O — optional FFmpeg video, optional EXR (vfx-rs), generic images; WebCodecs scaffold for Wasm"

[lib]
name = "playa_io"
path = "src/lib.rs"

[features]
default = ["exr", "ffmpeg"]
# Desk / full native stacks
exr = ["dep:vfx-exr", "dep:vfx-io", "dep:vfx-core"]
ffmpeg = ["dep:playa-ffmpeg"]
# Future: wasm-bindgen + web_sys bindings for browser WebCodecs
webcodecs = []

[dependencies]
half = { workspace = true }
image = { workspace = true }
log = { workspace = true }
playa-ffmpeg = { workspace = true, optional = true }

vfx-core = { git = "https://github.com/ssoj13/vfx-rs.git", branch = "main", optional = true }
vfx-exr = { git = "https://github.com/ssoj13/vfx-rs.git", branch = "main", optional = true, features = ["htj2k"] }
vfx-io = { git = "https://github.com/ssoj13/vfx-rs.git", branch = "main", optional = true, features = ["exr", "htj2k"] }
