[package]
name = "playa-job-seedance"
version = "0.1.142"
edition = "2024"
authors = ["joss13@gmail.com"]
description = "playa-jobs provider: Seedance 2.0 image-to-video via fal.ai (https://fal.ai/models/bytedance/seedance-2.0/image-to-video)."
license = "MIT"

[dependencies]
playa-jobs-core = { path = "../playa-jobs-core" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2", default-features = false, features = ["json", "tls"] }

[dev-dependencies]
uuid = { workspace = true }
