[package]
name = "playa-jobs-ui"
version = "0.1.142"
edition = "2024"
authors = ["joss13@gmail.com"]
description = "egui widgets for playa-jobs: JobsPanel, SubmitDialog, prefs::render. Optional addon to the playa-jobs subsystem."
license = "MIT"

[dependencies]
playa-jobs-core = { path = "../playa-jobs-core" }
egui-prefs = { git = "ssh://git@github.com/ssoj13/egui-widgets-rs.git", branch = "main" }
egui-jobs-table = { git = "ssh://git@github.com/ssoj13/egui-widgets-rs.git", branch = "main" }
egui = "0.34"
egui_extras = "0.34"
log = { workspace = true }
serde_json = { workspace = true }
