[package]
name = "playa-jobs"
version = "0.1.142"
edition = "2024"
authors = ["joss13@gmail.com"]
description = "All-in-one playa-jobs facade. Re-exports playa-jobs-core + (optional) ui + prefs + Seedance provider. Pick what you need via cargo features."
license = "MIT"

[features]
default = ["ui", "prefs", "seedance", "inpaint", "persist"]
ui = ["dep:playa-jobs-ui", "dep:egui-prefs"]
prefs = ["dep:egui-prefs"]
seedance = ["dep:playa-job-seedance"]
inpaint = ["dep:playa-job-inpaint"]
persist = ["playa-jobs-core/persist"]

[dependencies]
log = { workspace = true }
playa-jobs-core = { path = "../playa-jobs-core", default-features = false }
playa-jobs-ui = { path = "../playa-jobs-ui", optional = true }
egui-prefs = { git = "ssh://git@github.com/ssoj13/egui-widgets-rs.git", branch = "main", optional = true }
playa-job-seedance = { path = "../playa-job-seedance", optional = true }
playa-job-inpaint = { path = "../playa-job-inpaint", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
uuid = { workspace = true }
