[package]
name = "playa-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for playa - image sequence player"
license = "MIT"
publish = false

[lib]
name = "playa"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
playa = { path = "../.." }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
