[package]
name = "playa-ui"
version = "0.1.142"
edition = "2024"
publish = false
description = "Playa egui UI — widgets, dialogs, menu composition"

[lib]
name = "playa_ui"
path = "src/lib.rs"

[dependencies]
playa-engine = { path = "../playa-engine" }
playa-events = { path = "../playa-events" }
bytemuck = "1.25"
eframe = { version = "0.33", features = ["persistence"] }
egui_dnd = "0.14"
egui_dock = { version = "0.18", features = ["serde"] }
egui_extras = "0.33"
egui_glow = "0.33"
egui_ltreeview = { version = "0.6.1", features = ["persistence"] }
egui-snarl = { version = "0.9", features = ["serde"] }
glam = "0.32"
half = "2.7"
image = { version = "0.25", features = ["png", "jpeg", "tiff", "tga", "hdr"] }
log = "0.4"
playa-ffmpeg = { version = "8.0.3", features = ["static"] }
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
transform-gizmo-egui = "0.8"
uuid = { version = "1.22", features = ["v4", "serde"] }
vfx-core = { git = "ssh://git@github.com/ssoj13/vfx-rs.git", branch = "main" }
vfx-exr = { git = "ssh://git@github.com/ssoj13/vfx-rs.git", branch = "main", features = ["htj2k"] }
vfx-io = { git = "ssh://git@github.com/ssoj13/vfx-rs.git", branch = "main", features = ["exr", "htj2k"] }
