[package]
name = "playa-ui"
version = "0.1.142"
edition = "2024"
publish = false
description = "Playa egui UI — widgets, dialogs, menu composition"

[lib]
name = "playa_ui"
path = "src/lib.rs"

[dependencies]
playa-engine = { path = "../playa-engine" }
playa-events = { path = "../playa-events" }
playa-io = { path = "../playa-io", default-features = false }
playa-time = { workspace = true }
bytemuck = { workspace = true }
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "wayland",
    "web_screen_reader",
    "x11",
    "persistence",
] }
egui-wgpu = { workspace = true }
wgpu = { workspace = true }
egui_dnd = "0.14"
egui_dock = { workspace = true }
egui_extras = "0.33"
egui_ltreeview = { version = "0.6.1", features = ["persistence"] }
egui-snarl = { version = "0.9", features = ["serde"] }
glam = { workspace = true }
half = { workspace = true }
image = { workspace = true }
log = { workspace = true }
rfd = "0.17"
serde = { workspace = true }
serde_json = { workspace = true }
transform-gizmo-egui = "0.8"
uuid = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
playa-io = { path = "../playa-io", features = ["exr", "ffmpeg"] }
