[package]
name = "playa-ui"
version = "0.1.142"
edition = "2024"
publish = false
description = "Playa egui UI — widgets, dialogs, menu composition"

[lib]
name = "playa_ui"
path = "src/lib.rs"

[dependencies]
playa-engine = { path = "../playa-engine" }
playa-events = { path = "../playa-events" }
playa-io = { path = "../playa-io", default-features = false }
playa-time = { workspace = true }
playa-jobs-core = { path = "../playa-jobs-core", default-features = false }
bytemuck = { workspace = true }
eframe = { version = "0.34", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "wayland",
    "web_screen_reader",
    "x11",
    "persistence",
] }
egui-wgpu = { workspace = true }
wgpu = { workspace = true }
egui_dnd = "0.15"
egui_dock = { workspace = true }
egui_extras = "0.34"
# Reusable widgets extracted from playa, consumed via git-ref (single egui 0.34
# pin shared with eframe). See egui-widgets-rs.
egui-progressbar = { git = "ssh://git@github.com/ssoj13/egui-widgets-rs.git", branch = "main" }
egui_ltreeview = { version = "0.7", features = ["persistence"] }
egui-snarl = { version = "0.10", features = ["serde"] }
glam = { workspace = true }
half = { workspace = true }
image = { workspace = true }
log = { workspace = true }
rfd = "0.17"
serde = { workspace = true }
serde_json = { workspace = true }
transform-gizmo-egui = "0.9"
uuid = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
playa-io = { path = "../playa-io", features = ["exr", "ffmpeg"] }
